# YottaML

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: openapi.yaml
examples/: config.ini.example
examples/credential/: create_credential.py  delete_credential.py  get_credential_detail.py  get_credentials.py
examples/elastic/: create_deployment.py  delete_deployment.py  get_deployment_detail.py  get_deployments.py  get_endpoints.py  get_workers.py  run_deployment.py  scale_workers.py  start_deployment.py  stop_deployment.py  update_deployment.py
examples/gpu_resources/: get_gpus.py  get_gpus_filter.py
examples/pod/: delete_pod.py  get_pod_detail.py  get_pods.py  new_pod.py  pause_pod.py  resume_pod.py
examples/skywalker/: create_task.py  get_processing_count.py  get_task.py  list_tasks.py
examples/utils/: prepare_env.py
requirements/: requirements-test.txt
scripts/: test_pods.sh  test_serverless.sh
src/yottaml/: __init__.py  api.py  credential.py  elastic.py  gpu.py  pod.py  skywalker.py
src/yottaml_cli/: cli.py  config.py  formatter.py
tests/credential/: test_create_credential.py  test_delete_credential.py  test_get_credential_detail.py  test_get_credentials.py
tests/elastic/: test_create_deployment.py  test_deployment_lifecycle.py  test_get_deployment_detail.py  test_get_deployments.py  test_get_endpoint_detail.py  test_get_endpoints.py  test_get_workers.py  test_scale_workers.py  test_update_deployment.py
tests/gpu_resource/: test_get_gpus.py  (+1 more)
yotta/: __init__.py  api.py  credential.py  elastic.py  error.py  gpu.py  gpu_resource.py  http.py  pod.py  skywalker.py
(+21 files in other folders)
