[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "yottaml"
version = "0.2.0"
description = "A lightweight Python library and CLI for the YottaML public API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["yottaml", "GPU", "Public API"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/yottalabsai/YottaML"

[project.scripts]
yotta = "yottaml_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
